knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Quote/fields/Adjusted_Margin__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Margin__c</fullName>
    <formula>Margin__c * Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>