knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Quote/fields/Adjusted_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Total_Revenue__c</fullName>
    <formula>Total_Revenue__c *  Probability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Total Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>