knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Quote/fields/CE_by_Mgn__c.field-meta.xml
<CustomField>
    <fullName>CE_by_Mgn__c</fullName>
    <formula>CASE(Service_Line_s__c, 
&quot;EM&quot;, Margin__c/600000,
&quot;HM&quot;, Margin__c/135000,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CE by Mgn</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>