knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Quote/fields/CE_by_Vol__c.field-meta.xml
<CustomField>
    <fullName>CE_by_Vol__c</fullName>
    <formula>CASE(Service_Line_s__c, 
&quot;EM&quot;, Volume__c/23000,
&quot;HM&quot;, Volume__c/9500,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CE by Vol</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>