knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Quote/fields/Contract_Equivalents__c.field-meta.xml
<CustomField>
    <fullName>Contract_Equivalents__c</fullName>
    <label>Contract Equivalents</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>