knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Quote/fields/Final_Version__c.field-meta.xml
<CustomField>
    <fullName>Final_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Version</label>
    <type>Checkbox</type>
</CustomField>