knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Quote/fields/Margin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percentage__c</fullName>
    <formula>IF(Margin__c==0,0,Margin__c / ( Subsidy__c + Revenue__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>