knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Quote/fields/Opp_Id__c.field-meta.xml
<CustomField>
    <fullName>Opp_Id__c</fullName>
    <label>Opp_Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>