knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Quote/fields/Propossed_Contract_Start_Dt__c.field-meta.xml
<CustomField>
    <fullName>Propossed_Contract_Start_Dt__c</fullName>
    <label>Propossed Contract Start Date</label>
    <type>Date</type>
</CustomField>