knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Quote/fields/Propossed_Contract_Tm__c.field-meta.xml
<CustomField>
    <fullName>Propossed_Contract_Tm__c</fullName>
    <label>Propossed Contract Term (months)</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>