knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Quote/fields/Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Subsidy__c</fullName>
    <label>Subsidy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>