knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Quote/fields/Subsidy_as_of_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_as_of_Revenue__c</fullName>
    <formula>IF(Subsidy__c == 0,0,Subsidy__c / ( Subsidy__c + Revenue__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsidy as % of Revenue</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>